adding main class for experiment